--- a/astrarre-rendering-v0/build.gradle
+++ b/astrarre-rendering-v0/build.gradle
@@ -5,9 +5,12 @@ minecraft {
 }
 dependencies {
     implementation 'com.github.Astrarre:earcut4j:3.0.1'
-    include 'com.github.Astrarre:earcut4j:3.0.1'
+    //include 'com.github.Astrarre:earcut4j:3.0.1'
 }
 
 dependsOn(project, 'astrarre-util-v0', 'astrarre-itemview-v0')
-fapi(project, 'fabric-api-base', 'fabric-rendering-fluids-v1')
+
+loom {
+    mixinConfig "astrarre-rendering.mixins.json"
+}
 
