--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,9 @@ minecraft_version=1.16.5
 yarn_mappings=1.16.5+build.4
 loader_version=0.11.3
 
-#Fabric api
-fabric_version=0.33.0+1.16
+forge_version=36.1.15
+loom.forge = true
+
 
 # Mod Properties
 archives_base_name=astrarre-api
