--- a/astrarre-networking-v0/build.gradle
+++ b/astrarre-networking-v0/build.gradle
@@ -1,2 +1,5 @@
 version '1.0.0'
 dependsOn(project, 'astrarre-util-v0', 'astrarre-itemview-v0')
+loom {
+    mixinConfig "astrarre-network.mixins.json"
+}
