--- a/scripts/allprojects.gradle
+++ b/scripts/allprojects.gradle
@@ -7,18 +7,16 @@ allprojects {
         plugins.apply 'eclipse'
         plugins.apply 'java-library'
         plugins.apply 'maven-publish'
-        plugins.apply "fabric-loom"
+        plugins.apply "forgified-fabric-loom"
     }
 
     minecraft {}
     repositories {
         mavenLocal()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
         maven { url 'https://raw.githubusercontent.com/Devan-Kerman/Devan-Repo/master/' }
         maven { url 'https://maven.fabricmc.net/' }
-        maven { url 'http://maven.modmuss50.me/' }
-        maven { url 'https://jitpack.io' }
-        maven { url 'https://maven.legacyfabric.net/' }
         maven { url "https://maven.shedaniel.me/" }
     }
 
@@ -39,20 +37,10 @@ allprojects {
     }
 
     dependencies {
-        minecraft "com.mojang:minecraft:${minecraft_version}"
+        minecraft "com.mojang:minecraft:${project.minecraft_version}"
+        forge "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
         mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
-        modImplementation "net.fabricmc:fabric-loader:${loader_version}"
-        testImplementation('junit:junit:4.13.1') {
-            exclude module: 'fabric-loader'
-        }
-        testImplementation('net.devtech:PotatoUnit:1.0.3') {
-            exclude module: 'fabric-loader'
-        }
         testmodCompile sourceSets.main.output
-        testmodImplementation('com.github.astei:lazydfu:0.1.1') {
-            exclude module: 'fabric-loader'
-            exclude module: 'fabric-api'
-        }
     }
 
     processResources {
@@ -76,8 +64,7 @@ allprojects {
     afterEvaluate {
         task remapJar2(type: remapJar.class) {
             group = "astrarre"
-            addNestedDependencies = remapJar.addNestedDependencies
-            addDefaultNestedDependencies = false
+            addNestedDependencies = false
             remapAccessWidener = remapJar.remapAccessWidener
             jarRemapper = remapJar.jarRemapper
             input = remapJar.input
