--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,8 @@ pluginManagement {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
+        maven { url "https://maven.architectury.dev/" }
+        maven { url "https://files.minecraftforge.net/maven/" }
         mavenLocal()
     }
 }
@@ -19,5 +21,4 @@ include 'astrarre-access-v0'
 include 'astrarre-gui-v0'
 include 'astrarre-networking-v0'
 include 'astrarre-recipe-v0'
-include 'astrarre-transfer-compat-v0'
 
