--- a/astrarre-gui-v0/build.gradle
+++ b/astrarre-gui-v0/build.gradle
@@ -1,9 +1,14 @@
 version '1.2.1'
 dependsOn(project, 'astrarre-rendering-v0', 'astrarre-networking-v0')
-fapi(project, 'fabric-resource-loader-v0', 'fabric-screen-handler-api-v1', 'fabric-networking-api-v1', 'fabric-api-base')
+
+minecraft {
+    accessWidener = file('src/main/resources/astrarre-gui.accesswidener')
+}
 
 dependencies {
     modCompileOnly("me.shedaniel:RoughlyEnoughItems-api:5.11.188") {
         exclude module: 'fabric-loader'
+        exclude module: 'fabric-api'
     }
 }
+
