--- a/astrarre-transfer-v0/build.gradle
+++ b/astrarre-transfer-v0/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     modRuntime("net.fabricmc.fabric-api:fabric-api:$fabric_version") {
         exclude module: 'fabric-loader'
     }
-    modRuntime('me.steven:Industrial-Revolution-master:1.9.13-BETA') {
+    modRuntime('me.steven:Industrial-Revolution:1.9.13-BETA') {
         exclude module: 'fabric-loader'
         exclude module: 'fabric-api'
     }
