--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'eclipse'
     id 'java-library'
     id 'maven-publish'
-    id "fabric-loom" version "0.7.26"
+    id "fabric-loom" version "0.8.9"
 }
 
 version '1.1.1'
@@ -74,7 +74,7 @@ static def nanoevents(Project proj) {
             transitive = false
         }
 
-        testmodCompileOnly "net.devtech:nanoevents-ap:$nano_events_ap"
+        testmodImplementationOnly "net.devtech:nanoevents-ap:$nano_events_ap"
         compileOnly "net.devtech:nanoevents-ap:$nano_events_ap"
         annotationProcessor "net.devtech:nanoevents-ap:$nano_events_ap"
         testmodAnnotationProcessor "net.devtech:nanoevents-ap:$nano_events_ap"
@@ -92,6 +92,7 @@ static def dependsOn(Project proj, Iterable<Project> projs) {
         projs.each {
             compile it
             testmodCompile it.sourceSets.main.output
+            proj.tasks.compileJava.dependsOn(it.tasks.compileJava)
         }
     }
     proj.publishing {
