--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.4
+minecraft_version=1.17-pre1
+yarn_mappings=1.17-pre1+build.4
 loader_version=0.11.3
 
 #Fabric api
