--- a/scripts/allprojects.gradle
+++ b/scripts/allprojects.gradle
@@ -1,5 +1,7 @@
 
 allprojects {
+    sourceCompatibility = JavaVersion.VERSION_16
+    targetCompatibility = JavaVersion.VERSION_16
     group = 'io.github.astrarre'
     if (project != rootProject) {
         plugins.apply 'java'
@@ -16,7 +18,6 @@ allprojects {
         mavenCentral()
         maven { url 'https://raw.githubusercontent.com/Devan-Kerman/Devan-Repo/master/' }
         maven { url 'https://maven.fabricmc.net/' }
-        maven { url 'http://maven.modmuss50.me/' }
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.legacyfabric.net/' }
         maven { url "https://maven.shedaniel.me/" }
@@ -32,6 +33,11 @@ allprojects {
             compileClasspath += sourceSets.main.compileClasspath
             runtimeClasspath += sourceSets.main.compileClasspath
         }
+    }
+
+    configurations {
+        testmodImplementation.extendsFrom implementation
+        testmodCompile.extendsFrom compile
     }
 
     jar {
@@ -57,13 +63,8 @@ allprojects {
 
     processResources {
         inputs.property "version", project.version
-        from(sourceSets.main.resources.srcDirs) {
-            include "fabric.mod.json"
+        filesMatching("fabric.mod.json") {
             expand "version": project.version
-        }
-
-        from(sourceSets.main.resources.srcDirs) {
-            exclude "fabric.mod.json"
         }
     }
 
