Entity and PlayerEntity components. serialization, copying, builders and more
Signed-off-by: Devan-Kerman <dev.sel20@gmail.com>

--- a/astrarre-components-v0/src/main/resources/astrarre-components.mixins.json
+++ b/astrarre-components-v0/src/main/resources/astrarre-components.mixins.json
@@ -4,7 +4,9 @@
   "compatibilityLevel": "JAVA_16",
   "mixins": [
     "BlockEntityMixin",
-    "EntityMixin"
+    "EntityMixin_ObjectHolder_Serialization",
+    "PlayerEntityMixin_ObjectHolder_Serialization",
+    "ServerPlayerEntityMixin_Copy"
   ],
   "injectors": {
     "defaultRequire": 1
