--- a/settings.gradle
+++ b/settings.gradle
@@ -21,4 +21,5 @@ include 'astrarre-networking-v0'
 include 'astrarre-recipe-v0'
 include 'astrarre-transfer-compat-v0'
 include 'astrarre-components-v0'
+include 'astrarre-event-core-v0'
 
