--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 
-minecraft_version=1.17-rc1
-yarn_mappings=1.17-rc1+build.5
+minecraft_version=1.17
+yarn_mappings=1.17+build.7
 loader_version=0.11.3
 
 #Fabric api
-fabric_version=0.34.8+1.17
+fabric_version=0.34.10+1.17
 
 # Mod Properties
 archives_base_name=astrarre-api
