slot functionality almost working
Signed-off-by: Devan-Kerman <dev.sel20@gmail.com>

--- a/astrarre-gui-v1/build.gradle
+++ b/astrarre-gui-v1/build.gradle
@@ -1,3 +1,7 @@
 loom {
     accessWidener = file("$projectDir/src/main/resources/astrarre-rendering.accesswidener")
 }
+
+dependencies {
+    testmodImplementation project(":astrarre-recipe-v0")
+}
