--- a/astrarre-components-v0/src/main/resources/astrarre-components.mixins.json
+++ b/astrarre-components-v0/src/main/resources/astrarre-components.mixins.json
@@ -6,12 +6,17 @@
     "BlockEntityMixin",
     "ChunkDataS2CPacketMixin_SyncBlockEntity",
     "ChunkHolderMixin_BlockEntitySync",
+    "ChunkSerializerMixin_ChunkComponents",
     "ClientPlayerNetworkHandlerMixin_BlockEntityAccept",
     "ClientPlayNetworkHandlerMixin_SyncAccept",
     "EntityMixin_ObjectHolder_Serialization",
     "EntityTrackerEntryMixin_Sync",
+    "MinecraftServerAccess",
     "PlayerEntityMixin_ObjectHolder_Serialization",
-    "ServerPlayerEntityMixin_Copy_SyncBlockEntity"
+    "ProtoChunkMixin_AccessImpl",
+    "ReadOnlyChunkAccess",
+    "ServerPlayerEntityMixin_Copy_SyncBlockEntity",
+    "WorldChunkMixin_DeserializeProtoData"
   ],
   "injectors": {
     "defaultRequire": 1
